--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!--fontawesome-->
   <link rel="stylesheet" href="./assets/libs/font-awesome/css/all.css"/>
+  <!--gg font-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
   <app-root></app-root>
