--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>Aguri</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--favicon-->
+  <link rel="icon" type="image/x-icon" href="./assets/img/logo.svg">
   <!--fontawesome-->
   <link rel="stylesheet" href="./assets/libs/font-awesome/css/all.css"/>
   <!--gg font-->
