--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--favicon-->
-  <link rel="icon" type="image/x-icon" href="./assets/img/logo.svg">
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.svg">
   <!--fontawesome-->
   <link rel="stylesheet" href="./assets/libs/font-awesome/css/all.css"/>
   <!--gg font-->
